--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>hi team i am biruk</h2>
     <header>
         <nav>
             <a href="">Home</a>
