--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <a href="">Info</a>
         </nav>
     </header>
-    <h1>HI ALL IAM ELIAS </h1>
+    <h1>HI ALL I AM ELIAS </h1>
+    <p>i am working on this project now</p>
+    
     <div class="carousel">
         <div class="list">
             <div class="item">
