--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="">Home</a>
             <a href="">Contact</a>
             <a href="">Info</a>
+            <a href="">work</a>
         </nav>
     </header>
 
