--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div class="buttons">
                         <button>SUBSCRIBE</button>
                         <button>SEE MORE</button>
+                        <p>i am dessalegn</p>
                     </div>
                 </div>
             </div>
